# cq_gears

./: .gitattributes  .gitignore  README.md  __init__.py  api.py  cog4.py  core.py  environment.yaml  gear_direct.py  gears.py  helpers.py  hobbing.py  main.py  math.py  plotting.py  pyproject.toml  rack.py  requirements.txt  setup_env.sh  setup_ssh_tmux.sh  visualization.py
.github/workflows/: compile_documentation.yaml
cq_gears/: __init__.py  api.py  core.py  cq_bridge.py  gear_direct.py  geometry.py  hobbing.py  math.py  parametric_gear.py  plotting.py  rack.py  visualization.py
docs/: theory.md
docs/latex/: .gitignore  header.tex  references.bib  theory.tex
docs/latex/.github/workflows/: compile_documentation.yaml
docs/latex/chapters/: .gitignore  00_intorduction.tex  00_introduction.tex  01_mathematical_tools.tex  01_preliminaries.tex  02_involute.tex  02_preliminaries.tex  03_hypotroichoid.tex  03_involute.tex  03_undercut.tex  04_profile_shift.tex  04_tooth_geometry_and_positioning.tex  04_undercut.tex  05_curve_intersections.tex  05_profile_shift.tex  05_tooth_geometry_and_positioning.tex  06_curve_intersections.tex  06_spur_gears.tex  07_summary.tex
examples/: basic_gear.py  basic_gear_direct.py  hypotrochoid_demo.py  involute_demo.py  profile_shift_demo.py  tooth_demo.py  undercut_demo.py
export/: .gitignore
output/img/: .gitignore
scripts/: generate_docs_assets.py
