[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cq_gears"
version = "0.1.0"
description = "Parametric gear generation for CadQuery with DIN standard support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lukas Widmer", email = "lukas@widmer.id.au"}
]
keywords = ["cadquery", "gears", "parametric", "cad", "din", "involute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Computer Aided Design",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cadquery",
    "numpy",
    "scipy",
    "pyvista",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/lwidm/cq_gears"
Repository = "https://github.com/lwidm/cq_gears"
Issues = "https://github.com/lwidm/cq_gears/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cq_gears*"]
exclude = ["examples*", "output*", "export*"]
